# rtm

./: .all-contributorsrc  .editorconfig  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  make.py  sonar-project.properties
.github/workflows/: benchmark.yml  build_pull_request.yml  build_push.yml  main.yml  msvc-analysis.yml  sonarcloud.yml  test_cpp_versions.yml
cmake/: CMakeCompiler.cmake  Toolchain-Android.cmake
docs/: README.md  api_conventions.md  getting_started.md  handling_asserts.md  simd_support.md  types_supported.md
includes/rtm/: affine_matrix_32.h  affine_matrix_64.h  angled.h  anglef.h  camera_utilsd.h  camera_utilsf.h  constants.h  coordinate_system.h  error.h  macros.h  mask4d.h  mask4f.h  mask4i.h  mask4q.h  math.h  matrix3x3d.h  matrix3x3f.h  matrix3x4d.h  matrix3x4f.h  matrix4x4d.h  matrix4x4f.h  memory_utils.h  quat_32.h  quat_64.h  quatd.h  quatf.h  qvd.h  qvf.h  qvsd.h  qvsf.h  qvvd.h  qvvf.h  qvvsd.h  qvvsf.h  scalar_32.h  scalar_64.h  scalard.h  scalarf.h  transform_32.h  transform_64.h  (+7 more)
includes/rtm/impl/: angle_common.h  angle_constants.h  cmath.impl.h  compiler_utils.h  detect_arch.h  detect_compiler.h  detect_cpp_version.h  detect_features.h  error.h  macros.mask4.impl.h  macros.matrix.impl.h  macros.vector4.impl.h  mask_common.h  matrix_affine_common.h  matrix_cast.h  matrix_common.h  memory_utils.h  quat_common.h  qv_common.h  qvs_common.h  qvv_common.h  qvvs_common.h  scalar_common.h  type_args.h  type_args.neon.impl.h  type_args.neon64.impl.h  type_args.other.impl.h  type_args.vectorcall.impl.h  type_args.x64_clang.impl.h  type_args.x64_gcc.impl.h  vector_common.h  vector_mix_common.h
includes/rtm/packing/: quatd.h  quatf.h
tests/: CMakeLists.txt
tests/main_android/: AndroidManifest.xml  CMakeLists.txt  build.xml
tests/main_android/app/src/main/cpp/: CMakeLists.txt  main.cpp
tests/main_android/java/com/rtm/: MainActivity.java
tests/main_android/java/com/rtm/unit_tests/: MainActivity.java
tests/main_android/jni/: main.cpp
tests/main_android/res/values/: strings.xml
tests/main_emscripten/: CMakeLists.txt  main.cpp
tests/main_generic/: CMakeLists.txt  main.cpp
tests/main_ios/: CMakeLists.txt  main.cpp
tests/sources/: catch2.impl.h  test_affine_matrix.cpp  test_angle.cpp  test_constants.cpp  test_header_fwd.cpp  test_macros.cpp  test_mask4.cpp  test_matrix3x3.cpp  test_matrix3x3_impl.h  test_matrix3x3d.cpp  test_matrix3x3f.cpp  test_matrix3x4.cpp  test_matrix4x4.cpp  test_memory_utils.cpp  test_packing_quat.cpp  test_quat.cpp  test_qv.cpp  test_qvs.cpp  test_qvv.cpp  test_qvvs.cpp  test_scalar.cpp  test_transform.cpp  test_vector4_32.cpp  test_vector4_32_mix_0.cpp  test_vector4_32_mix_1.cpp  test_vector4_64.cpp  test_vector4_64_mix_0.cpp  test_vector4_64_mix_1.cpp  test_vector4_impl.h  test_vector4_mix_impl.h  test_vector4d.cpp  test_vector4d_mix_0.cpp  test_vector4d_mix_1.cpp  test_vector4d_mix_a.cpp  test_vector4d_mix_b.cpp  test_vector4d_mix_c.cpp  test_vector4d_mix_d.cpp  test_vector4d_mix_w.cpp  test_vector4d_mix_x.cpp  test_vector4d_mix_y.cpp  (+12 more)
tests/sources/vector_mix/: test_vector4_mix_impl.h  test_vector4d_mix_aa.cpp  test_vector4d_mix_ab.cpp  test_vector4d_mix_ac.cpp  test_vector4d_mix_ad.cpp  test_vector4d_mix_aw.cpp  test_vector4d_mix_ax.cpp  test_vector4d_mix_ay.cpp  test_vector4d_mix_az.cpp  test_vector4d_mix_ba.cpp  test_vector4d_mix_bb.cpp  test_vector4d_mix_bc.cpp  test_vector4d_mix_bd.cpp  test_vector4d_mix_bw.cpp  test_vector4d_mix_bx.cpp  test_vector4d_mix_by.cpp  test_vector4d_mix_bz.cpp  test_vector4d_mix_ca.cpp  test_vector4d_mix_cb.cpp  test_vector4d_mix_cc.cpp  test_vector4d_mix_cd.cpp  test_vector4d_mix_cw.cpp  test_vector4d_mix_cx.cpp  test_vector4d_mix_cy.cpp  test_vector4d_mix_cz.cpp  test_vector4d_mix_da.cpp  test_vector4d_mix_db.cpp  test_vector4d_mix_dc.cpp  test_vector4d_mix_dd.cpp  test_vector4d_mix_dw.cpp  test_vector4d_mix_dx.cpp  test_vector4d_mix_dy.cpp  test_vector4d_mix_dz.cpp  test_vector4d_mix_wa.cpp  test_vector4d_mix_wb.cpp  test_vector4d_mix_wc.cpp  test_vector4d_mix_wd.cpp  test_vector4d_mix_ww.cpp  test_vector4d_mix_wx.cpp  test_vector4d_mix_wy.cpp  (+89 more)
tests/validate_includes/: CMakeLists.txt  dummy.cpp  single_include.cpp.in
tools/: appveyor_ci.bat
tools/android_misc/: settings.gradle.in
tools/android_misc/app/: build.gradle.in
tools/android_misc/app/src/main/: AndroidManifest.xml.in
tools/android_misc/app/src/main/res/values/: strings.xml.in
tools/bench/: CMakeLists.txt
tools/bench/main_android/: AndroidManifest.xml  CMakeLists.txt  build.xml
tools/bench/main_android/app/src/main/cpp/: CMakeLists.txt
tools/bench/main_android/app/src/main/java/com/rtm/benchmark/: MainActivity.java
tools/bench/main_android/java/com/rtm/: MainActivity.java
tools/bench/main_android/java/com/rtm/benchmark/: MainActivity.java
tools/bench/main_android/jni/: main.cpp
tools/bench/main_android/res/values/: strings.xml
tools/bench/main_generic/: CMakeLists.txt  main.cpp
tools/bench/main_ios/: CMakeLists.txt  main.cpp
tools/bench/sources/: bench_mask_all_equal.cpp  bench_mask_any_equal3.cpp  bench_quat_conjugate.cpp  bench_quat_ensure_positive_w.cpp  bench_quat_from_positive_w.cpp  bench_quat_mul.cpp  bench_quat_mul_vector3.cpp  bench_qvv_mul.cpp  bench_scalar_abs.cpp  bench_scalar_ceil.cpp  bench_scalar_floor.cpp  bench_scalar_reciprocal.cpp  bench_scalar_round_bankers.cpp  bench_scalar_round_symmetric.cpp  bench_scalar_sin.cpp  bench_vector_abs.cpp  bench_vector_acos.cpp  bench_vector_asin.cpp  bench_vector_atan.cpp  bench_vector_atan2.cpp  bench_vector_ceil.cpp  bench_vector_cos.cpp  bench_vector_cross3.cpp  bench_vector_dot.cpp  bench_vector_dot3.cpp  bench_vector_dot3_v.cpp  bench_vector_dot_v.cpp  bench_vector_floor.cpp  bench_vector_reciprocal.cpp  bench_vector_round_bankers.cpp  bench_vector_round_symmetric.cpp  bench_vector_sign.cpp  bench_vector_sin.cpp
tools/release_scripts/: README.md  test_everything.py
tools/vs_visualizers/: rtm.natvis
(+1 files in other folders)
